--- a/css/common.css
+++ b/css/common.css
@@ -1,52 +1,21 @@
 @charset "UTF-8";
+a { text-decoration: none; } 
+img { display: block; } 
 
-a{text-decoration: none;}
-
-body {font-family: "Pretendard Variable", sans-serif;}
+body { font-family: "Pretendard Variable", sans-serif; word-break: keep-all; } 
 .page-title {
-
-    font-size: 50px;
-    font-weight: 800;
-    line-height: 1.3;
-    color: #13b491;
-    text-align: center;
-    margin: 100px 0 20px;
-}
+ font-size: 50px; font-weight: 800; line-height: 1.3; color: #13b491; text-align: center; margin: 100px 0 20px; } 
 
 .page-subtitle {
+ width: 240px; height: 50px; border: 5px solid #FFA32D; border-radius: 30px; display: flex; justify-content: center; align-items: center; font-size: 24px; font-weight: 700; color: #FFA32D; margin: 0px auto 20px; position: absolute; top: 80px; left: 50%; transform: translateX(-50%); } 
 
-    width: 240px; height: 50px;
-    border: 5px solid #FFA32D;
-    border-radius: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    font-weight: 700;
-    color: #FFA32D;
-    margin: 20px auto 20px;
-    position: absolute; top: 0; left: 50%;
-    transform: translateX(-50%);
-}
+.btn { max-width: 500px; height: 100px; display: flex; /* block요소와 비슷한 속성을 갖게함 */
+ justify-content: center; align-items: center; font-size: 50px; font-weight: 700; cursor: pointer; border-radius: 20px; margin: 0 auto 35px; transition: 0.1s; } 
 
-.btn {
-    max-width: 500px;
-    height: 100px;
-    display: flex; /* block요소와 비슷한 속성을 갖게함 */
-    justify-content: center;
-    align-items: center;
-    font-size: 50px;
-    font-weight: 700;
-    cursor: pointer;
-    border-radius: 20px;
-    margin: 0 auto 35px;
-    transition: 0.1s;
-}
-
-.btn-orange {background: #FFA32D; box-shadow: 0 14px #E66000; color: #fff;}
-.btn-orange:active { box-shadow: 0 4px #E66000; transform: translateY(10px);}
-.btn-green {background: #32bfa1; box-shadow: 0 14px #299a82; color: #fff;}
-.btn-green:active { box-shadow: 0 4px #299a82; transform: translateY(10px);}
-.btn-gray {background: #f2f4f6; box-shadow: 0 14px 0 #dfe1e2; color: #444;}
-.btn-gray:active { box-shadow: 0 4px #dfe1e2; transform: translateY(10px);}
-.btn-small {min-width: 350px; height: 70px; font-size: 26px; margin-bottom: 30px;}
+.btn-orange { background: #FFA32D; box-shadow: 0 14px #E66000; color: #fff; } 
+.btn-orange:active { box-shadow: 0 4px #E66000; transform: translateY(10px); } 
+.btn-green { background: #32bfa1; box-shadow: 0 14px #299a82; color: #fff; } 
+.btn-green:active { box-shadow: 0 4px #299a82; transform: translateY(10px); } 
+.btn-gray { background: #f2f4f6; box-shadow: 0 14px 0 #dfe1e2; color: #444; } 
+.btn-gray:active { box-shadow: 0 4px #dfe1e2; transform: translateY(10px); } 
+.btn-small { min-width: 350px; height: 70px; font-size: 26px; margin-bottom: 30px; } 
