--- a/css/questions.css
+++ b/css/questions.css
@@ -27,8 +27,23 @@ body {background: url("../images/questions_bg.jpg")no-repeat top center;}
     box-shadow: 0 4px 25px #dde2e8;
 }
 
-.question-box .number {font-size: 60px; font-weight: 900; text-align: center; color: #2ec7a6; margin-bottom: 30px;}
+.question-box .number {
+    font-size: 60px; 
+    font-weight: 900; 
+    text-align: center; 
+    color: #2ec7a6; 
+    margin-bottom: 30px;
+}
 
 .question-box .question {
-    font-size: 20px;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 1.5;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.question-box .choice {
+    border-radius: 120px;
+    font-size: 22px;
 }
